# Sweepcord

./: DISCORD_ALTERNATIVES.md  README.md  main.py  pyproject.toml
src/sweepcord/: sweepcord.py
src/sweepcord/libsweepcord/: libsweepcord.py
